--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
-    <string name="app_name">Atsumare</string>
+    <string name="app_name">集まれ！</string>
+
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
+    <string name="title_activity_maps">集まれ！</string>
+    <string name="title_activity_select_group">グループ選択</string>
+    <string name="title_activity_wait_member">メンバー待ち</string>
+    <string name="title_activity_signin">会員登録</string>
+    <string name="title_activity_splash">SplashActivity</string>
+    <string name="title_activity_group">GroupActivity</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
